--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -74,32 +74,36 @@ $extra:lightgrey;
         height: 460px;
         width: 300px;
     }
+
+    .card-image {
+        width: 100%;
+        height: 300px;
+        background-position-y: top;
+        background-position-x: center;
+    }
+
+    .details {
+        padding: 10px;
+        color: white;
+
+        h2 {
+            font-size: 30px;
+            margin-bottom: 10px;
+        }
+    
+        p {
+            font-size: 18px;
+            margin-bottom: 5px;
+        }
+    
+        .runtime {
+            color: $primary;
+        }
+    }
+
+    
 }
 
-
-.card-image {
-    width: 100%;
-    height: 300px;
-    background-position-y: top;
-    background-position-x: center;
-}
-
-.details {
-    padding: 10px;
-    color: white;
-}
-
-.details h2{
-    font-size: 30px;
-    margin-bottom: 10px;
-}
-.details p{
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-.runtime{
-    color: $primary;
-}
 
 .rail {
     display: flex;
@@ -113,7 +117,7 @@ $extra:lightgrey;
 }
 
 .no-results {
-    margin: 10px;
+    margin: 30px;
 }
 
 a{text-decoration: none;}
@@ -123,39 +127,45 @@ a{text-decoration: none;}
     margin-top: 50px;
     display: flex;
     justify-content: center;
+
+    .movie-detail-image {
+        height: 100%;
+        width: 30%;
+        background-size: cover;
+        background-position-y: top;
+        background-position-x: center;
+    }
+
+    .movie-detail-info {
+        height: calc(100% - 40px);
+        width: 30%;
+        background-color: $primary;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+        
+        h3 {
+            font-size: 50px;
+        }
+    
+        p {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+    
+        span {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 30px;
+        }
+    
+        .plot {
+            text-align: justify;
+        }
+    }
+
+    
 }
 
-.movie-detail-image{
-    height: 100%;
-    width:30%;
-    background-size:cover ;
-    background-position-y: top;
-    background-position-x: center;
-}
-.movie-detail-info{
-    height: calc(100% - 40px);
-    width: 30%;
-    background-color: $primary;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-}
-
-.movie-detail-info h3{
-    font-size: 50px;
-}
-
-.movie-detail-info p {
-    font-size: 20px;
-    margin: 10px 0;
-}
-
-span{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 30px;
-}
-
-.plot{text-align: justify;}
